--- a/index/login.html
+++ b/index/login.html
@@ -2,15 +2,16 @@
 <html>
 <head>
 <title>ORANGELLA</title>
-<link rel="stylesheet" href="orangella_style.css">
+<link rel="stylesheet" href="../style/orangella_style.css">
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet"> 
 <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
+<link rel="icon" href="../img/orangeface.png" type="image/png" />
 </head>
 <body >
 <div id="container">
 <div id="header">
-<h1><img src="img/orangeface.png" />ORANGELLA</h1>
+<h1><img src="../img/orangeface.png" />ORANGELLA</h1>
 </div>
 <div id="navigation">
 <ul id="menu">
@@ -22,7 +23,7 @@
 <div id="content">
 <p class="style1">Registrati al sito rispondendo alle domande e potrai vincere un viaggio stupendo!!</p>
 <p id="form_style">
-	<img src="img/orangella_img.png" />
+	<img src="../img/orangella_img.png" />
 	<form method="post" action="mailto:ff@gmail.com" class="form-container">
 	
 <h2>LOGIN-FANZONE</h2>
@@ -46,15 +47,16 @@
 		Quante Orangella bevi a settimana
 		<select name="cars" class="form-title2">
 
-		<option value="volvo">1</option>
-		<option value="saab">2</option>
-		<option value="fiat">3</option>
-		<option value="audi">10+</option>
+		<option value="1">1</option>
+		<option value="2">2</option>
+		<option value="3">3</option>
+		<option value="10+">10+</option>		
 
 		</select>
 	</div>
 	<input type="submit" value="SUBMIT" class="submit-button"  /> 
 	<input type="reset" value="RESET" class="reset-button"  /> 
+	<p>Questa è una modifica fatta da Dalbesio Stefano</p>
 	
 </form>
 </p>
