--- a/index/orangella_home.html
+++ b/index/orangella_home.html
@@ -2,15 +2,16 @@
 <html>
 <head>
 <title>ORANGELLA</title>
-<link rel="stylesheet" href="orangella_style.css">
+<link rel="stylesheet" href="../style/orangella_style.css">
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet"> 
 <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
+<link rel="icon" href="../img/orangeface.png" type="image/png" />
 </head>
 <body >
 <div id="container">
 <div id="header">
-<h1><img src="img/orangeface.png" />ORANGELLA</h1>
+<h1><img src="../img/orangeface.png" />ORANGELLA</h1>
 </div>
 <div id="navigation">
 <ul id="menu">
@@ -22,7 +23,7 @@
 <div id="content">
 <p class="style1">ORANGELLA, FATTI RAPIRE DALL'ARANCIATA PIU' BUONA AL MONDO!</p>
 <p class="style2">GUSTO FRIZZANTI PER TE E GLI AMICI</p>
-<img src="img/orangella_img.png" />
+<img src="../img/orangella_img.png" />
 <p class="style3"><span class="bg_effect">LA BEVANDA DELL'ESTATE!</span></p>
 
 </div>
